[build-system]
requires = ["flit_core >=3.2,<4", "sphinx_bootstrap_theme"]
build-backend = "flit_core.buildapi"

[project]
name = "KnowledgeBase"
description = "All the artefacts"
authors = [{name = "celikelozdinc", email = "ozdinc.celikel@gmail.com"}]
dynamic = ["version", "description"]

[project.urls]
Documentation = "https://readthedocsknowledgebase.readthedocs.io/"
Source = "https://github.com/celikelozdinc/KnowledgeBase"